--- a/Test Rosenbrock 50-100.ipynb
+++ b/Test Rosenbrock 50-100.ipynb
@@ -89,9 +89,10 @@
     "data_dev = DictDataset({\"p\":p_dev, \"a\":a_dev}, name=\"dev\")\n",
     "# torch dataloaders\n",
     "from torch.utils.data import DataLoader\n",
-    "loader_train = DataLoader(data_train, batch_size=32, num_workers=0, collate_fn=data_train.collate_fn, shuffle=True)\n",
-    "loader_test = DataLoader(data_test, batch_size=32, num_workers=0, collate_fn=data_test.collate_fn, shuffle=False)\n",
-    "loader_dev = DataLoader(data_dev, batch_size=32, num_workers=0, collate_fn=data_dev.collate_fn, shuffle=True)"
+    "batch_size = 32\n",
+    "loader_train = DataLoader(data_train, batch_size, num_workers=0, collate_fn=data_train.collate_fn, shuffle=True)\n",
+    "loader_test = DataLoader(data_test, batch_size, num_workers=0, collate_fn=data_test.collate_fn, shuffle=False)\n",
+    "loader_dev = DataLoader(data_dev, batch_size, num_workers=0, collate_fn=data_dev.collate_fn, shuffle=False)"
    ]
   },
   {
@@ -216,8 +217,7 @@
     "hlayers_sol = 4       # number of hidden layers for solution mapping\n",
     "hlayers_rnd = 4       # number of hidden layers for solution mapping\n",
     "hsize = 256           # width of hidden layers for solution mapping\n",
-    "lr = 1e-3             # learning rate\n",
-    "batch_size = 64       # batch size"
+    "lr = 1e-3             # learning rate"
    ]
   },
   {
@@ -448,8 +448,7 @@
     "hlayers_sol = 4       # number of hidden layers for solution mapping\n",
     "hlayers_rnd = 4       # number of hidden layers for solution mapping\n",
     "hsize = 256           # width of hidden layers for solution mapping\n",
-    "lr = 1e-3             # learning rate\n",
-    "batch_size = 64       # batch size"
+    "lr = 1e-3             # learning rate"
    ]
   },
   {
