--- a/Test Rosenbrock 50-10.ipynb
+++ b/Test Rosenbrock 50-10.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "6a4fb3e2-9c47-4c10-8116-e94be18ea59c",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "536d2d58-67ba-408a-b72a-7c5bd54a5ff4",
    "metadata": {},
    "outputs": [],
@@ -217,13 +217,12 @@
     "hlayers_sol = 4       # number of hidden layers for solution mapping\n",
     "hlayers_rnd = 4       # number of hidden layers for solution mapping\n",
     "hsize = 128           # width of hidden layers for solution mapping\n",
-    "lr = 1e-3             # learning rate\n",
-    "batch_size = 64       # batch size"
+    "lr = 1e-3             # learning rate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "fee1241e-e53a-4cbb-927a-edcdb3537303",
    "metadata": {},
    "outputs": [],
@@ -249,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "e4f10263-5f69-4288-a4e8-8be83929c8d6",
    "metadata": {},
    "outputs": [
@@ -257,62 +256,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Validation Loss: 1477.58\n",
-      "Epoch 1, Validation Loss: 585.23\n",
-      "Epoch 2, Validation Loss: 224.37\n",
-      "Epoch 3, Validation Loss: 127.26\n",
-      "Epoch 4, Validation Loss: 135.42\n",
-      "Epoch 5, Validation Loss: 116.43\n",
-      "Epoch 6, Validation Loss: 91.23\n",
-      "Epoch 7, Validation Loss: 77.43\n",
-      "Epoch 8, Validation Loss: 88.36\n",
-      "Epoch 9, Validation Loss: 72.61\n",
-      "Epoch 10, Validation Loss: 93.06\n",
-      "Epoch 11, Validation Loss: 89.61\n",
-      "Epoch 12, Validation Loss: 68.20\n",
-      "Epoch 13, Validation Loss: 65.66\n",
-      "Epoch 14, Validation Loss: 80.61\n",
-      "Epoch 15, Validation Loss: 76.80\n",
-      "Epoch 16, Validation Loss: 65.43\n",
-      "Epoch 17, Validation Loss: 77.80\n",
-      "Epoch 18, Validation Loss: 65.39\n",
-      "Epoch 19, Validation Loss: 65.64\n",
-      "Epoch 20, Validation Loss: 67.39\n",
-      "Epoch 21, Validation Loss: 62.36\n",
-      "Epoch 22, Validation Loss: 59.67\n",
-      "Epoch 23, Validation Loss: 61.49\n",
-      "Epoch 24, Validation Loss: 64.74\n",
-      "Epoch 25, Validation Loss: 59.38\n",
-      "Epoch 26, Validation Loss: 60.65\n",
-      "Epoch 27, Validation Loss: 61.68\n",
-      "Epoch 28, Validation Loss: 65.70\n",
-      "Epoch 29, Validation Loss: 58.80\n",
-      "Epoch 30, Validation Loss: 57.22\n",
-      "Epoch 31, Validation Loss: 61.17\n",
-      "Epoch 32, Validation Loss: 59.37\n",
-      "Epoch 33, Validation Loss: 60.40\n",
-      "Epoch 34, Validation Loss: 54.31\n",
-      "Epoch 35, Validation Loss: 53.00\n",
-      "Epoch 36, Validation Loss: 58.80\n",
-      "Epoch 37, Validation Loss: 57.36\n",
-      "Epoch 38, Validation Loss: 54.41\n",
-      "Epoch 39, Validation Loss: 58.80\n",
-      "Epoch 40, Validation Loss: 58.25\n",
-      "Epoch 41, Validation Loss: 61.58\n",
-      "Epoch 42, Validation Loss: 75.14\n",
-      "Epoch 43, Validation Loss: 72.36\n",
-      "Epoch 44, Validation Loss: 65.48\n",
-      "Epoch 45, Validation Loss: 68.56\n",
-      "Epoch 46, Validation Loss: 65.23\n",
-      "Epoch 47, Validation Loss: 62.15\n",
-      "Epoch 48, Validation Loss: 65.98\n",
-      "Epoch 49, Validation Loss: 65.53\n",
-      "Epoch 50, Validation Loss: 79.39\n",
-      "Epoch 51, Validation Loss: 64.38\n",
-      "Epoch 52, Validation Loss: 66.19\n",
-      "Epoch 53, Validation Loss: 70.40\n",
-      "Epoch 54, Validation Loss: 69.71\n",
-      "Early stopping at epoch 54\n",
+      "Epoch 0, Validation Loss: 1476.02\n",
+      "Epoch 1, Validation Loss: 447.90\n",
+      "Epoch 2, Validation Loss: 232.15\n",
+      "Epoch 3, Validation Loss: 158.07\n",
+      "Epoch 4, Validation Loss: 122.24\n",
+      "Epoch 5, Validation Loss: 102.63\n",
+      "Epoch 6, Validation Loss: 84.71\n",
+      "Epoch 7, Validation Loss: 85.92\n",
+      "Epoch 8, Validation Loss: 83.06\n",
+      "Epoch 9, Validation Loss: 78.74\n",
+      "Epoch 10, Validation Loss: 79.32\n",
+      "Epoch 11, Validation Loss: 69.89\n",
+      "Epoch 12, Validation Loss: 64.02\n",
+      "Epoch 13, Validation Loss: 61.32\n",
+      "Epoch 14, Validation Loss: 58.90\n",
+      "Epoch 15, Validation Loss: 53.83\n",
+      "Epoch 16, Validation Loss: 57.97\n",
+      "Epoch 17, Validation Loss: 57.09\n",
+      "Epoch 18, Validation Loss: 56.57\n",
+      "Epoch 19, Validation Loss: 57.31\n",
+      "Epoch 20, Validation Loss: 60.09\n",
+      "Epoch 21, Validation Loss: 59.06\n",
+      "Epoch 22, Validation Loss: 57.28\n",
+      "Epoch 23, Validation Loss: 55.00\n",
+      "Epoch 24, Validation Loss: 61.50\n",
+      "Epoch 25, Validation Loss: 62.82\n",
+      "Epoch 26, Validation Loss: 66.60\n",
+      "Epoch 27, Validation Loss: 55.70\n",
+      "Epoch 28, Validation Loss: 51.29\n",
+      "Epoch 29, Validation Loss: 57.21\n",
+      "Epoch 30, Validation Loss: 54.15\n",
+      "Epoch 31, Validation Loss: 62.52\n",
+      "Epoch 32, Validation Loss: 75.54\n",
+      "Epoch 33, Validation Loss: 52.57\n",
+      "Epoch 34, Validation Loss: 53.75\n",
+      "Epoch 35, Validation Loss: 62.98\n",
+      "Epoch 36, Validation Loss: 67.66\n",
+      "Epoch 37, Validation Loss: 52.50\n",
+      "Epoch 38, Validation Loss: 56.37\n",
+      "Epoch 39, Validation Loss: 50.65\n",
+      "Epoch 40, Validation Loss: 64.91\n",
+      "Epoch 41, Validation Loss: 86.37\n",
+      "Epoch 42, Validation Loss: 57.41\n",
+      "Epoch 43, Validation Loss: 55.71\n",
+      "Epoch 44, Validation Loss: 69.65\n",
+      "Epoch 45, Validation Loss: 60.12\n",
+      "Epoch 46, Validation Loss: 59.01\n",
+      "Epoch 47, Validation Loss: 61.40\n",
+      "Epoch 48, Validation Loss: 61.31\n",
+      "Epoch 49, Validation Loss: 51.69\n",
+      "Epoch 50, Validation Loss: 58.02\n",
+      "Epoch 51, Validation Loss: 56.01\n",
+      "Epoch 52, Validation Loss: 62.39\n",
+      "Epoch 53, Validation Loss: 57.74\n",
+      "Epoch 54, Validation Loss: 59.30\n",
+      "Epoch 55, Validation Loss: 57.01\n",
+      "Epoch 56, Validation Loss: 64.65\n",
+      "Epoch 57, Validation Loss: 59.87\n",
+      "Epoch 58, Validation Loss: 73.05\n",
+      "Early stopping at epoch 58\n",
       "Best model loaded.\n",
       "Training complete.\n"
      ]
@@ -333,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "3e835084-eb75-45d9-bcbd-5fb4c613fb41",
    "metadata": {},
    "outputs": [
@@ -341,7 +344,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:06<00:00, 154.69it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:06<00:00, 163.55it/s]\n"
      ]
     },
     {
@@ -350,13 +353,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean     52.897958          0.001374      0.003280\n",
-      "std      23.466194          0.028543      0.000980\n",
-      "min      15.928951          0.000000      0.001000\n",
-      "25%      37.187093          0.000000      0.002870\n",
-      "50%      47.659432          0.000000      0.003115\n",
-      "75%      60.472170          0.000000      0.003582\n",
-      "max     153.842457          0.850705      0.015043\n",
+      "mean     50.769843          0.000664      0.003276\n",
+      "std      23.805431          0.013374      0.000882\n",
+      "min      16.175062          0.000000      0.001505\n",
+      "25%      33.960098          0.000000      0.002583\n",
+      "50%      44.983535          0.000000      0.003099\n",
+      "75%      62.077217          0.000000      0.003826\n",
+      "max     144.758310          0.360057      0.008720\n",
       "Number of infeasible solution: 4\n"
      ]
     }
@@ -405,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "36c57dbb-8dee-4976-8922-82a155fe0128",
    "metadata": {},
    "outputs": [],
@@ -418,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "d46b9817-87ac-4af0-b387-b10c9a4998f4",
    "metadata": {},
    "outputs": [],
@@ -428,13 +431,12 @@
     "hlayers_sol = 4       # number of hidden layers for solution mapping\n",
     "hlayers_rnd = 4       # number of hidden layers for solution mapping\n",
     "hsize = 128           # width of hidden layers for solution mapping\n",
-    "lr = 1e-3             # learning rate\n",
-    "batch_size = 64       # batch size"
+    "lr = 1e-3             # learning rate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "fa8b147f-39c8-4eb7-bb95-93dd8e4cb1cf",
    "metadata": {},
    "outputs": [],
@@ -460,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "c6f5bb17-8c3c-4dcd-952d-caa1d7c4c4fa",
    "metadata": {},
    "outputs": [
@@ -468,81 +470,81 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Validation Loss: 1189.71\n",
-      "Epoch 1, Validation Loss: 309.48\n",
-      "Epoch 2, Validation Loss: 112.62\n",
-      "Epoch 3, Validation Loss: 104.53\n",
-      "Epoch 4, Validation Loss: 82.53\n",
-      "Epoch 5, Validation Loss: 92.26\n",
-      "Epoch 6, Validation Loss: 73.49\n",
-      "Epoch 7, Validation Loss: 85.53\n",
-      "Epoch 8, Validation Loss: 69.54\n",
-      "Epoch 9, Validation Loss: 70.75\n",
-      "Epoch 10, Validation Loss: 72.12\n",
-      "Epoch 11, Validation Loss: 64.86\n",
-      "Epoch 12, Validation Loss: 71.37\n",
-      "Epoch 13, Validation Loss: 71.52\n",
-      "Epoch 14, Validation Loss: 88.86\n",
-      "Epoch 15, Validation Loss: 69.28\n",
-      "Epoch 16, Validation Loss: 72.16\n",
-      "Epoch 17, Validation Loss: 67.78\n",
-      "Epoch 18, Validation Loss: 69.09\n",
-      "Epoch 19, Validation Loss: 64.05\n",
-      "Epoch 20, Validation Loss: 66.84\n",
-      "Epoch 21, Validation Loss: 63.14\n",
-      "Epoch 22, Validation Loss: 64.88\n",
-      "Epoch 23, Validation Loss: 67.35\n",
-      "Epoch 24, Validation Loss: 70.58\n",
-      "Epoch 25, Validation Loss: 64.34\n",
-      "Epoch 26, Validation Loss: 63.85\n",
-      "Epoch 27, Validation Loss: 63.95\n",
-      "Epoch 28, Validation Loss: 62.50\n",
-      "Epoch 29, Validation Loss: 62.70\n",
-      "Epoch 30, Validation Loss: 61.66\n",
-      "Epoch 31, Validation Loss: 65.59\n",
-      "Epoch 32, Validation Loss: 60.86\n",
-      "Epoch 33, Validation Loss: 69.19\n",
-      "Epoch 34, Validation Loss: 66.59\n",
-      "Epoch 35, Validation Loss: 67.05\n",
-      "Epoch 36, Validation Loss: 58.26\n",
-      "Epoch 37, Validation Loss: 66.42\n",
-      "Epoch 38, Validation Loss: 62.15\n",
-      "Epoch 39, Validation Loss: 71.42\n",
-      "Epoch 40, Validation Loss: 70.66\n",
-      "Epoch 41, Validation Loss: 63.01\n",
-      "Epoch 42, Validation Loss: 61.47\n",
-      "Epoch 43, Validation Loss: 62.83\n",
-      "Epoch 44, Validation Loss: 62.25\n",
-      "Epoch 45, Validation Loss: 69.65\n",
-      "Epoch 46, Validation Loss: 66.28\n",
-      "Epoch 47, Validation Loss: 62.42\n",
-      "Epoch 48, Validation Loss: 59.39\n",
-      "Epoch 49, Validation Loss: 63.54\n",
-      "Epoch 50, Validation Loss: 64.17\n",
-      "Epoch 51, Validation Loss: 72.80\n",
-      "Epoch 52, Validation Loss: 63.34\n",
-      "Epoch 53, Validation Loss: 66.40\n",
-      "Epoch 54, Validation Loss: 70.29\n",
-      "Epoch 55, Validation Loss: 57.60\n",
-      "Epoch 56, Validation Loss: 65.38\n",
-      "Epoch 57, Validation Loss: 63.60\n",
-      "Epoch 58, Validation Loss: 68.04\n",
-      "Epoch 59, Validation Loss: 59.52\n",
-      "Epoch 60, Validation Loss: 66.32\n",
-      "Epoch 61, Validation Loss: 61.43\n",
-      "Epoch 62, Validation Loss: 63.33\n",
-      "Epoch 63, Validation Loss: 61.42\n",
-      "Epoch 64, Validation Loss: 65.64\n",
-      "Epoch 65, Validation Loss: 62.52\n",
-      "Epoch 66, Validation Loss: 66.90\n",
-      "Epoch 67, Validation Loss: 61.95\n",
-      "Epoch 68, Validation Loss: 66.90\n",
-      "Epoch 69, Validation Loss: 66.59\n",
-      "Epoch 70, Validation Loss: 65.18\n",
-      "Epoch 71, Validation Loss: 57.77\n",
-      "Epoch 72, Validation Loss: 62.68\n",
-      "Epoch 73, Validation Loss: 67.00\n",
-      "Epoch 74, Validation Loss: 66.58\n",
+      "Epoch 0, Validation Loss: 1187.90\n",
+      "Epoch 1, Validation Loss: 405.60\n",
+      "Epoch 2, Validation Loss: 112.12\n",
+      "Epoch 3, Validation Loss: 100.49\n",
+      "Epoch 4, Validation Loss: 77.23\n",
+      "Epoch 5, Validation Loss: 95.82\n",
+      "Epoch 6, Validation Loss: 79.39\n",
+      "Epoch 7, Validation Loss: 82.70\n",
+      "Epoch 8, Validation Loss: 71.22\n",
+      "Epoch 9, Validation Loss: 74.49\n",
+      "Epoch 10, Validation Loss: 72.54\n",
+      "Epoch 11, Validation Loss: 83.04\n",
+      "Epoch 12, Validation Loss: 74.20\n",
+      "Epoch 13, Validation Loss: 75.75\n",
+      "Epoch 14, Validation Loss: 72.42\n",
+      "Epoch 15, Validation Loss: 66.66\n",
+      "Epoch 16, Validation Loss: 70.40\n",
+      "Epoch 17, Validation Loss: 66.79\n",
+      "Epoch 18, Validation Loss: 69.06\n",
+      "Epoch 19, Validation Loss: 68.58\n",
+      "Epoch 20, Validation Loss: 68.68\n",
+      "Epoch 21, Validation Loss: 65.69\n",
+      "Epoch 22, Validation Loss: 69.57\n",
+      "Epoch 23, Validation Loss: 67.66\n",
+      "Epoch 24, Validation Loss: 67.15\n",
+      "Epoch 25, Validation Loss: 71.50\n",
+      "Epoch 26, Validation Loss: 70.82\n",
+      "Epoch 27, Validation Loss: 74.32\n",
+      "Epoch 28, Validation Loss: 64.25\n",
+      "Epoch 29, Validation Loss: 66.30\n",
+      "Epoch 30, Validation Loss: 70.57\n",
+      "Epoch 31, Validation Loss: 68.86\n",
+      "Epoch 32, Validation Loss: 66.03\n",
+      "Epoch 33, Validation Loss: 70.43\n",
+      "Epoch 34, Validation Loss: 65.62\n",
+      "Epoch 35, Validation Loss: 70.20\n",
+      "Epoch 36, Validation Loss: 64.85\n",
+      "Epoch 37, Validation Loss: 65.73\n",
+      "Epoch 38, Validation Loss: 67.57\n",
+      "Epoch 39, Validation Loss: 62.05\n",
+      "Epoch 40, Validation Loss: 67.98\n",
+      "Epoch 41, Validation Loss: 61.78\n",
+      "Epoch 42, Validation Loss: 66.45\n",
+      "Epoch 43, Validation Loss: 66.14\n",
+      "Epoch 44, Validation Loss: 64.22\n",
+      "Epoch 45, Validation Loss: 65.29\n",
+      "Epoch 46, Validation Loss: 61.82\n",
+      "Epoch 47, Validation Loss: 71.21\n",
+      "Epoch 48, Validation Loss: 61.81\n",
+      "Epoch 49, Validation Loss: 68.98\n",
+      "Epoch 50, Validation Loss: 64.88\n",
+      "Epoch 51, Validation Loss: 68.34\n",
+      "Epoch 52, Validation Loss: 70.82\n",
+      "Epoch 53, Validation Loss: 61.72\n",
+      "Epoch 54, Validation Loss: 65.85\n",
+      "Epoch 55, Validation Loss: 61.57\n",
+      "Epoch 56, Validation Loss: 68.63\n",
+      "Epoch 57, Validation Loss: 69.62\n",
+      "Epoch 58, Validation Loss: 70.59\n",
+      "Epoch 59, Validation Loss: 62.56\n",
+      "Epoch 60, Validation Loss: 69.39\n",
+      "Epoch 61, Validation Loss: 67.07\n",
+      "Epoch 62, Validation Loss: 66.52\n",
+      "Epoch 63, Validation Loss: 64.83\n",
+      "Epoch 64, Validation Loss: 68.71\n",
+      "Epoch 65, Validation Loss: 65.62\n",
+      "Epoch 66, Validation Loss: 69.09\n",
+      "Epoch 67, Validation Loss: 69.34\n",
+      "Epoch 68, Validation Loss: 74.18\n",
+      "Epoch 69, Validation Loss: 66.39\n",
+      "Epoch 70, Validation Loss: 72.91\n",
+      "Epoch 71, Validation Loss: 67.97\n",
+      "Epoch 72, Validation Loss: 69.31\n",
+      "Epoch 73, Validation Loss: 67.32\n",
+      "Epoch 74, Validation Loss: 67.64\n",
       "Early stopping at epoch 74\n",
       "Best model loaded.\n",
       "Training complete.\n"
@@ -564,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "6584d57e-6b4c-4262-82f5-55735ef17cac",
    "metadata": {},
    "outputs": [
@@ -572,7 +574,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:06<00:00, 151.70it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:05<00:00, 182.11it/s]\n"
      ]
     },
     {
@@ -581,14 +583,14 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean     57.735791          0.001711      0.003562\n",
-      "std      20.595893          0.022737      0.000857\n",
-      "min      16.544964          0.000000      0.001103\n",
-      "25%      41.008030          0.000000      0.003015\n",
-      "50%      56.706220          0.000000      0.003513\n",
-      "75%      71.934538          0.000000      0.004123\n",
-      "max     117.018879          0.447096      0.008980\n",
-      "Number of infeasible solution: 7\n"
+      "mean     61.242237          0.003479      0.002981\n",
+      "std      24.403990          0.079699      0.000739\n",
+      "min       8.234531          0.000000      0.001000\n",
+      "25%      43.504385          0.000000      0.002350\n",
+      "50%      56.753799          0.000000      0.003013\n",
+      "75%      78.066198          0.000000      0.003436\n",
+      "max     134.794266          2.437754      0.005433\n",
+      "Number of infeasible solution: 5\n"
      ]
     }
    ],
