Bug fixed: penalty

--- a/Test Rosenbrock 50-1000.ipynb
+++ b/Test Rosenbrock 50-1000.ipynb
@@ -224,7 +224,7 @@
    "outputs": [],
    "source": [
     "# hyperparameters\n",
-    "penalty_weight = 10000 # weight of constraint violation penealty\n",
+    "penalty_weight = 80    # weight of constraint violation penealty\n",
     "hlayers_sol = 4        # number of hidden layers for solution mapping\n",
     "hlayers_rnd = 4        # number of hidden layers for solution mapping\n",
     "hsize = 2048           # width of hidden layers for solution mapping\n",
@@ -254,7 +254,7 @@
     "                       int_ind=model.int_ind, continuous_update=True, name=\"round\")\n",
     "# build neuromancer problem for rounding\n",
     "components = nn.ModuleList([smap, rnd]).to(\"cuda\")\n",
-    "loss_fn = nmRosenbrock([\"p\", \"a\", \"x_rnd\"], steepness, num_blocks)"
+    "loss_fn = nmRosenbrock([\"p\", \"a\", \"x_rnd\"], steepness, num_blocks, penalty_weight)"
    ]
   },
   {
@@ -267,70 +267,84 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Validation Loss: 143429.63\n",
-      "Epoch 1, Validation Loss: 115900.00\n",
-      "Epoch 2, Validation Loss: 127993.11\n",
-      "Epoch 3, Validation Loss: 63064.74\n",
-      "Epoch 4, Validation Loss: 644523.97\n",
-      "Epoch 5, Validation Loss: 938724.74\n",
-      "Epoch 6, Validation Loss: 83263.77\n",
-      "Epoch 7, Validation Loss: 4122373.37\n",
-      "Epoch 8, Validation Loss: 46205.25\n",
-      "Epoch 9, Validation Loss: 414026.08\n",
-      "Epoch 10, Validation Loss: 37387.88\n",
-      "Epoch 11, Validation Loss: 19799.74\n",
-      "Epoch 12, Validation Loss: 47740.83\n",
-      "Epoch 13, Validation Loss: 16443.97\n",
-      "Epoch 14, Validation Loss: 58899.39\n",
-      "Epoch 15, Validation Loss: 11640.24\n",
-      "Epoch 16, Validation Loss: 13527.90\n",
-      "Epoch 17, Validation Loss: 15559.42\n",
-      "Epoch 18, Validation Loss: 15985.22\n",
-      "Epoch 19, Validation Loss: 10621.04\n",
-      "Epoch 20, Validation Loss: 10488.57\n",
-      "Epoch 21, Validation Loss: 12285.20\n",
-      "Epoch 22, Validation Loss: 11600.55\n",
-      "Epoch 23, Validation Loss: 10271.51\n",
-      "Epoch 24, Validation Loss: 10304.57\n",
-      "Epoch 25, Validation Loss: 9358.16\n",
-      "Epoch 26, Validation Loss: 8967.97\n",
-      "Epoch 27, Validation Loss: 10550.18\n",
-      "Epoch 28, Validation Loss: 7736.23\n",
-      "Epoch 29, Validation Loss: 7810.00\n",
-      "Epoch 30, Validation Loss: 7245.74\n",
-      "Epoch 31, Validation Loss: 7907.74\n",
-      "Epoch 32, Validation Loss: 7917.15\n",
-      "Epoch 33, Validation Loss: 12672.85\n",
-      "Epoch 34, Validation Loss: 7318.49\n",
-      "Epoch 35, Validation Loss: 8306.85\n",
-      "Epoch 36, Validation Loss: 7680.22\n",
-      "Epoch 37, Validation Loss: 7668.20\n",
-      "Epoch 38, Validation Loss: 13583741385504190.00\n",
-      "Epoch 39, Validation Loss: 213553474719252.38\n",
-      "Epoch 40, Validation Loss: 32067.51\n",
-      "Epoch 41, Validation Loss: 8145.10\n",
-      "Epoch 42, Validation Loss: 17115.89\n",
-      "Epoch 43, Validation Loss: 6624.01\n",
-      "Epoch 44, Validation Loss: 15464.95\n",
-      "Epoch 45, Validation Loss: 15103.23\n",
-      "Epoch 46, Validation Loss: 21603.33\n",
-      "Epoch 47, Validation Loss: 17743.24\n",
-      "Epoch 48, Validation Loss: 18272.18\n",
-      "Epoch 49, Validation Loss: 6712.36\n",
-      "Epoch 50, Validation Loss: 15833.00\n",
-      "Epoch 51, Validation Loss: 22878.24\n",
-      "Epoch 52, Validation Loss: 230210297406701.53\n",
-      "Epoch 53, Validation Loss: 6942.00\n",
-      "Epoch 54, Validation Loss: 154330441777152.00\n",
-      "Epoch 55, Validation Loss: 11012.67\n",
-      "Epoch 56, Validation Loss: 8868.20\n",
-      "Epoch 57, Validation Loss: 12764.85\n",
-      "Epoch 58, Validation Loss: 649751578036007.62\n",
-      "Epoch 59, Validation Loss: 20516.58\n",
-      "Epoch 60, Validation Loss: 14616.91\n",
-      "Epoch 61, Validation Loss: 1182841.06\n",
-      "Epoch 62, Validation Loss: 406334072952375476224.00\n",
-      "Early stopping at epoch 62\n",
+      "Epoch 0, Validation Loss: 209522.95\n",
+      "Epoch 1, Validation Loss: 180980.51\n",
+      "Epoch 2, Validation Loss: 76112.93\n",
+      "Epoch 3, Validation Loss: 443439.25\n",
+      "Epoch 4, Validation Loss: 39903.96\n",
+      "Epoch 5, Validation Loss: 45483.47\n",
+      "Epoch 6, Validation Loss: 29610.77\n",
+      "Epoch 7, Validation Loss: 47120.95\n",
+      "Epoch 8, Validation Loss: 22747.78\n",
+      "Epoch 9, Validation Loss: 1233025546.35\n",
+      "Epoch 10, Validation Loss: 31109.25\n",
+      "Epoch 11, Validation Loss: 23331.81\n",
+      "Epoch 12, Validation Loss: 27422.60\n",
+      "Epoch 13, Validation Loss: 16699.41\n",
+      "Epoch 14, Validation Loss: 24157.16\n",
+      "Epoch 15, Validation Loss: 18064.45\n",
+      "Epoch 16, Validation Loss: 22602.64\n",
+      "Epoch 17, Validation Loss: 21087.52\n",
+      "Epoch 18, Validation Loss: 12535.24\n",
+      "Epoch 19, Validation Loss: 12371.85\n",
+      "Epoch 20, Validation Loss: 13072.17\n",
+      "Epoch 21, Validation Loss: 1394057239.77\n",
+      "Epoch 22, Validation Loss: 32363.06\n",
+      "Epoch 23, Validation Loss: 25055.87\n",
+      "Epoch 24, Validation Loss: 12680.14\n",
+      "Epoch 25, Validation Loss: 11976.16\n",
+      "Epoch 26, Validation Loss: 2368721255.04\n",
+      "Epoch 27, Validation Loss: 165333.84\n",
+      "Epoch 28, Validation Loss: 2429020.31\n",
+      "Epoch 29, Validation Loss: 3920353.30\n",
+      "Epoch 30, Validation Loss: 21661.41\n",
+      "Epoch 31, Validation Loss: 3930381.63\n",
+      "Epoch 32, Validation Loss: 36386661.73\n",
+      "Epoch 33, Validation Loss: 3328832883.74\n",
+      "Epoch 34, Validation Loss: 97919743.95\n",
+      "Epoch 35, Validation Loss: 31130726.41\n",
+      "Epoch 36, Validation Loss: 4872874.46\n",
+      "Epoch 37, Validation Loss: 17193.22\n",
+      "Epoch 38, Validation Loss: 12272.41\n",
+      "Epoch 39, Validation Loss: 8800.79\n",
+      "Epoch 40, Validation Loss: 10739.23\n",
+      "Epoch 41, Validation Loss: 11817.88\n",
+      "Epoch 42, Validation Loss: 12382.93\n",
+      "Epoch 43, Validation Loss: 10562.69\n",
+      "Epoch 44, Validation Loss: 9560.12\n",
+      "Epoch 45, Validation Loss: 8185.23\n",
+      "Epoch 46, Validation Loss: 18854.99\n",
+      "Epoch 47, Validation Loss: 14939.04\n",
+      "Epoch 48, Validation Loss: 8052.16\n",
+      "Epoch 49, Validation Loss: 10379.00\n",
+      "Epoch 50, Validation Loss: 7467.82\n",
+      "Epoch 51, Validation Loss: 9824.67\n",
+      "Epoch 52, Validation Loss: 70786860784.07\n",
+      "Epoch 53, Validation Loss: 9054.67\n",
+      "Epoch 54, Validation Loss: 7840.71\n",
+      "Epoch 55, Validation Loss: 7232.05\n",
+      "Epoch 56, Validation Loss: 7257.03\n",
+      "Epoch 57, Validation Loss: 6763.39\n",
+      "Epoch 58, Validation Loss: 9533.16\n",
+      "Epoch 59, Validation Loss: 14119.14\n",
+      "Epoch 60, Validation Loss: 15431.45\n",
+      "Epoch 61, Validation Loss: 368544351205.53\n",
+      "Epoch 62, Validation Loss: 7110.96\n",
+      "Epoch 63, Validation Loss: 9143.66\n",
+      "Epoch 64, Validation Loss: 9782.43\n",
+      "Epoch 65, Validation Loss: 821831304064.00\n",
+      "Epoch 66, Validation Loss: 9011.11\n",
+      "Epoch 67, Validation Loss: 8689.81\n",
+      "Epoch 68, Validation Loss: 7486.80\n",
+      "Epoch 69, Validation Loss: 10000.30\n",
+      "Epoch 70, Validation Loss: 8012.10\n",
+      "Epoch 71, Validation Loss: 10496.89\n",
+      "Epoch 72, Validation Loss: 7520.09\n",
+      "Epoch 73, Validation Loss: 11569.24\n",
+      "Epoch 74, Validation Loss: 21805.56\n",
+      "Epoch 75, Validation Loss: 11797.47\n",
+      "Epoch 76, Validation Loss: 24154647501520336.00\n",
+      "Early stopping at epoch 76\n",
       "Best model loaded.\n",
       "Training complete.\n"
      ]
@@ -359,7 +373,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [02:20<00:00,  7.10it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [02:34<00:00,  6.47it/s]\n"
      ]
     },
     {
@@ -368,14 +382,14 @@
      "text": [
       "            Obj Val  Constraints Viol  Elapsed Time\n",
       "count   1000.000000       1000.000000   1000.000000\n",
-      "mean    6357.728138          5.738670      0.019345\n",
-      "std     2310.145717         32.967547      0.002545\n",
-      "min     2902.516872          0.000000      0.002996\n",
-      "25%     4949.477974          0.000000      0.019212\n",
-      "50%     5894.668679          0.000000      0.019745\n",
-      "75%     6872.249410          0.000000      0.020049\n",
-      "max    16660.015531        492.800426      0.022525\n",
-      "Number of infeasible solution: 49\n"
+      "mean    6650.374215          1.307318      0.019679\n",
+      "std     1120.364047         11.214535      0.002546\n",
+      "min     3792.878020          0.000000      0.003506\n",
+      "25%     6100.835013          0.000000      0.019606\n",
+      "50%     6499.965338          0.000000      0.020024\n",
+      "75%     7239.633277          0.000000      0.020530\n",
+      "max    11121.786878        177.610756      0.023118\n",
+      "Number of infeasible solution: 21\n"
      ]
     }
    ],
@@ -442,7 +456,7 @@
    "outputs": [],
    "source": [
     "# hyperparameters\n",
-    "penalty_weight = 1000 # weight of constraint violation penealty\n",
+    "penalty_weight = 80   # weight of constraint violation penealty\n",
     "hlayers_sol = 4       # number of hidden layers for solution mapping\n",
     "hlayers_rnd = 4       # number of hidden layers for solution mapping\n",
     "hsize = 2048          # width of hidden layers for solution mapping\n",
@@ -472,7 +486,7 @@
     "                          int_ind=model.int_ind, continuous_update=True, name=\"round\")\n",
     "# build neuromancer problem for rounding\n",
     "components = nn.ModuleList([smap, rnd]).to(\"cuda\")\n",
-    "loss_fn = nmRosenbrock([\"p\", \"a\", \"x_rnd\"], steepness, num_blocks)"
+    "loss_fn = nmRosenbrock([\"p\", \"a\", \"x_rnd\"], steepness, num_blocks, penalty_weight)"
    ]
   },
   {
@@ -485,73 +499,77 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Validation Loss: 119191.00\n",
-      "Epoch 1, Validation Loss: 103242.50\n",
-      "Epoch 2, Validation Loss: 49453.37\n",
-      "Epoch 3, Validation Loss: 39898.60\n",
-      "Epoch 4, Validation Loss: 35072.94\n",
-      "Epoch 5, Validation Loss: 21384.19\n",
-      "Epoch 6, Validation Loss: 38918.05\n",
-      "Epoch 7, Validation Loss: 30468.62\n",
-      "Epoch 8, Validation Loss: 25291.34\n",
-      "Epoch 9, Validation Loss: 22412.84\n",
-      "Epoch 10, Validation Loss: 33291.81\n",
-      "Epoch 11, Validation Loss: 15737.15\n",
-      "Epoch 12, Validation Loss: 15881.57\n",
-      "Epoch 13, Validation Loss: 16797.99\n",
-      "Epoch 14, Validation Loss: 20727.59\n",
-      "Epoch 15, Validation Loss: 14368.88\n",
-      "Epoch 16, Validation Loss: 13701.97\n",
-      "Epoch 17, Validation Loss: 21516.69\n",
-      "Epoch 18, Validation Loss: 12356.11\n",
-      "Epoch 19, Validation Loss: 13896.57\n",
-      "Epoch 20, Validation Loss: 19742.80\n",
-      "Epoch 21, Validation Loss: 12957.02\n",
-      "Epoch 22, Validation Loss: 66736.64\n",
-      "Epoch 23, Validation Loss: 29196.55\n",
-      "Epoch 24, Validation Loss: 9596.76\n",
-      "Epoch 25, Validation Loss: 2896213.92\n",
-      "Epoch 26, Validation Loss: 8998.97\n",
-      "Epoch 27, Validation Loss: 9084.63\n",
-      "Epoch 28, Validation Loss: 7839.13\n",
-      "Epoch 29, Validation Loss: 10829.50\n",
-      "Epoch 30, Validation Loss: 11759.32\n",
-      "Epoch 31, Validation Loss: 541783582844163.12\n",
-      "Epoch 32, Validation Loss: 581376.10\n",
-      "Epoch 33, Validation Loss: 10907.87\n",
-      "Epoch 34, Validation Loss: 2538921888.53\n",
-      "Epoch 35, Validation Loss: 7338.71\n",
-      "Epoch 36, Validation Loss: 4961157.86\n",
-      "Epoch 37, Validation Loss: 7316.11\n",
-      "Epoch 38, Validation Loss: 19057.84\n",
-      "Epoch 39, Validation Loss: 7602.59\n",
-      "Epoch 40, Validation Loss: 6478.15\n",
-      "Epoch 41, Validation Loss: 6696.14\n",
-      "Epoch 42, Validation Loss: 7229.02\n",
-      "Epoch 43, Validation Loss: 33954330355643.43\n",
-      "Epoch 44, Validation Loss: 55336.94\n",
-      "Epoch 45, Validation Loss: 325826812297771.19\n",
-      "Epoch 46, Validation Loss: 6363.12\n",
-      "Epoch 47, Validation Loss: 8823.78\n",
-      "Epoch 48, Validation Loss: 6545.45\n",
-      "Epoch 49, Validation Loss: 7360.22\n",
-      "Epoch 50, Validation Loss: 15458.58\n",
-      "Epoch 51, Validation Loss: 14611.59\n",
-      "Epoch 52, Validation Loss: 8211.13\n",
-      "Epoch 53, Validation Loss: 7344.73\n",
-      "Epoch 54, Validation Loss: 8018.29\n",
-      "Epoch 55, Validation Loss: 9383.43\n",
-      "Epoch 56, Validation Loss: 17876.75\n",
-      "Epoch 57, Validation Loss: 9694.43\n",
-      "Epoch 58, Validation Loss: 38841.58\n",
-      "Epoch 59, Validation Loss: 9259.36\n",
-      "Epoch 60, Validation Loss: 7958.32\n",
-      "Epoch 61, Validation Loss: 11422.92\n",
-      "Epoch 62, Validation Loss: 6710.56\n",
-      "Epoch 63, Validation Loss: 29491.36\n",
-      "Epoch 64, Validation Loss: 8222.81\n",
-      "Epoch 65, Validation Loss: 17631.49\n",
-      "Early stopping at epoch 65\n",
+      "Epoch 0, Validation Loss: 185825.69\n",
+      "Epoch 1, Validation Loss: 105174.41\n",
+      "Epoch 2, Validation Loss: 98083.05\n",
+      "Epoch 3, Validation Loss: 134239.02\n",
+      "Epoch 4, Validation Loss: 48417.94\n",
+      "Epoch 5, Validation Loss: 29058.18\n",
+      "Epoch 6, Validation Loss: 26681.46\n",
+      "Epoch 7, Validation Loss: 227183.36\n",
+      "Epoch 8, Validation Loss: 7782363525.31\n",
+      "Epoch 9, Validation Loss: 24340.26\n",
+      "Epoch 10, Validation Loss: 67583.60\n",
+      "Epoch 11, Validation Loss: 21142.05\n",
+      "Epoch 12, Validation Loss: 19603.90\n",
+      "Epoch 13, Validation Loss: 23721849743.30\n",
+      "Epoch 14, Validation Loss: 24693.95\n",
+      "Epoch 15, Validation Loss: 143229324.37\n",
+      "Epoch 16, Validation Loss: 2910652813205272.00\n",
+      "Epoch 17, Validation Loss: 855063369200539604615168.00\n",
+      "Epoch 18, Validation Loss: 14565.40\n",
+      "Epoch 19, Validation Loss: 27198.74\n",
+      "Epoch 20, Validation Loss: 15129.94\n",
+      "Epoch 21, Validation Loss: 23339.76\n",
+      "Epoch 22, Validation Loss: 18995.59\n",
+      "Epoch 23, Validation Loss: 21900.59\n",
+      "Epoch 24, Validation Loss: 11159.74\n",
+      "Epoch 25, Validation Loss: 12761.09\n",
+      "Epoch 26, Validation Loss: 12360.39\n",
+      "Epoch 27, Validation Loss: 13262.14\n",
+      "Epoch 28, Validation Loss: 9857.88\n",
+      "Epoch 29, Validation Loss: 11798.60\n",
+      "Epoch 30, Validation Loss: 10565.73\n",
+      "Epoch 31, Validation Loss: 269279848358.47\n",
+      "Epoch 32, Validation Loss: 12377.34\n",
+      "Epoch 33, Validation Loss: 16932.71\n",
+      "Epoch 34, Validation Loss: 8796.29\n",
+      "Epoch 35, Validation Loss: 18201150761041.62\n",
+      "Epoch 36, Validation Loss: 1288678127184307.75\n",
+      "Epoch 37, Validation Loss: 9952.25\n",
+      "Epoch 38, Validation Loss: 10277.88\n",
+      "Epoch 39, Validation Loss: 4565679084674862.00\n",
+      "Epoch 40, Validation Loss: 7476.79\n",
+      "Epoch 41, Validation Loss: 19871124423830776.00\n",
+      "Epoch 42, Validation Loss: 9715.58\n",
+      "Epoch 43, Validation Loss: 7710.23\n",
+      "Epoch 44, Validation Loss: 9406.74\n",
+      "Epoch 45, Validation Loss: 10018.79\n",
+      "Epoch 46, Validation Loss: 11904.66\n",
+      "Epoch 47, Validation Loss: 9739.18\n",
+      "Epoch 48, Validation Loss: 3498091924068883973013504.00\n",
+      "Epoch 49, Validation Loss: 8460.98\n",
+      "Epoch 50, Validation Loss: 6370.56\n",
+      "Epoch 51, Validation Loss: 9836.97\n",
+      "Epoch 52, Validation Loss: 7091.29\n",
+      "Epoch 53, Validation Loss: 23516.46\n",
+      "Epoch 54, Validation Loss: 9815.14\n",
+      "Epoch 55, Validation Loss: 6718.13\n",
+      "Epoch 56, Validation Loss: 8448.85\n",
+      "Epoch 57, Validation Loss: 8778.86\n",
+      "Epoch 58, Validation Loss: 8077.12\n",
+      "Epoch 59, Validation Loss: 6637.94\n",
+      "Epoch 60, Validation Loss: 8240.88\n",
+      "Epoch 61, Validation Loss: 8103.38\n",
+      "Epoch 62, Validation Loss: 17307.90\n",
+      "Epoch 63, Validation Loss: 7593.62\n",
+      "Epoch 64, Validation Loss: 6389.24\n",
+      "Epoch 65, Validation Loss: 287144041071283011584.00\n",
+      "Epoch 66, Validation Loss: 19056.82\n",
+      "Epoch 67, Validation Loss: 9401.68\n",
+      "Epoch 68, Validation Loss: 10453.75\n",
+      "Epoch 69, Validation Loss: 10664.33\n",
+      "Early stopping at epoch 69\n",
       "Best model loaded.\n",
       "Training complete.\n"
      ]
@@ -580,7 +598,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [02:22<00:00,  7.03it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [02:24<00:00,  6.90it/s]\n"
      ]
     },
     {
@@ -589,13 +607,13 @@
      "text": [
       "            Obj Val  Constraints Viol  Elapsed Time\n",
       "count   1000.000000       1000.000000   1000.000000\n",
-      "mean    6300.617434          1.389105      0.019434\n",
-      "std     1697.095446         12.859576      0.002212\n",
-      "min     3873.477160          0.000000      0.003927\n",
-      "25%     5379.147649          0.000000      0.019122\n",
-      "50%     6100.950273          0.000000      0.019664\n",
-      "75%     6641.603255          0.000000      0.020045\n",
-      "max    24803.048244        199.828129      0.022887\n",
+      "mean    6195.200172          1.821974      0.019639\n",
+      "std     1562.808182         21.032867      0.002739\n",
+      "min     3965.215929          0.000000      0.003000\n",
+      "25%     4878.100643          0.000000      0.019650\n",
+      "50%     5876.587116          0.000000      0.020029\n",
+      "75%     7376.366106          0.000000      0.020485\n",
+      "max    11598.931829        450.352139      0.034322\n",
       "Number of infeasible solution: 19\n"
      ]
     }
