--- a/Test Rosenbrock 50-10.ipynb
+++ b/Test Rosenbrock 50-10.ipynb
@@ -213,7 +213,7 @@
    "outputs": [],
    "source": [
     "# hyperparameters\n",
-    "penalty_weight = 100  # weight of constraint violation penealty\n",
+    "penalty_weight = 80   # weight of constraint violation penealty\n",
     "hlayers_sol = 4       # number of hidden layers for solution mapping\n",
     "hlayers_rnd = 4       # number of hidden layers for solution mapping\n",
     "hsize = 128           # width of hidden layers for solution mapping\n",
@@ -243,7 +243,7 @@
     "                       int_ind=model.int_ind, continuous_update=True, name=\"round\")\n",
     "# build neuromancer problem for rounding\n",
     "components = nn.ModuleList([smap, rnd]).to(\"cuda\")\n",
-    "loss_fn = nmRosenbrock([\"p\", \"a\", \"x_rnd\"], steepness, num_blocks)"
+    "loss_fn = nmRosenbrock([\"p\", \"a\", \"x_rnd\"], steepness, num_blocks, penalty_weight)"
    ]
   },
   {
@@ -256,66 +256,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Validation Loss: 1476.02\n",
-      "Epoch 1, Validation Loss: 447.90\n",
-      "Epoch 2, Validation Loss: 232.15\n",
-      "Epoch 3, Validation Loss: 158.07\n",
-      "Epoch 4, Validation Loss: 122.24\n",
-      "Epoch 5, Validation Loss: 102.63\n",
-      "Epoch 6, Validation Loss: 84.71\n",
-      "Epoch 7, Validation Loss: 85.92\n",
-      "Epoch 8, Validation Loss: 83.06\n",
-      "Epoch 9, Validation Loss: 78.74\n",
-      "Epoch 10, Validation Loss: 79.32\n",
-      "Epoch 11, Validation Loss: 69.89\n",
-      "Epoch 12, Validation Loss: 64.02\n",
-      "Epoch 13, Validation Loss: 61.32\n",
-      "Epoch 14, Validation Loss: 58.90\n",
-      "Epoch 15, Validation Loss: 53.83\n",
-      "Epoch 16, Validation Loss: 57.97\n",
-      "Epoch 17, Validation Loss: 57.09\n",
-      "Epoch 18, Validation Loss: 56.57\n",
-      "Epoch 19, Validation Loss: 57.31\n",
-      "Epoch 20, Validation Loss: 60.09\n",
-      "Epoch 21, Validation Loss: 59.06\n",
-      "Epoch 22, Validation Loss: 57.28\n",
-      "Epoch 23, Validation Loss: 55.00\n",
-      "Epoch 24, Validation Loss: 61.50\n",
-      "Epoch 25, Validation Loss: 62.82\n",
-      "Epoch 26, Validation Loss: 66.60\n",
-      "Epoch 27, Validation Loss: 55.70\n",
-      "Epoch 28, Validation Loss: 51.29\n",
-      "Epoch 29, Validation Loss: 57.21\n",
-      "Epoch 30, Validation Loss: 54.15\n",
-      "Epoch 31, Validation Loss: 62.52\n",
-      "Epoch 32, Validation Loss: 75.54\n",
-      "Epoch 33, Validation Loss: 52.57\n",
-      "Epoch 34, Validation Loss: 53.75\n",
-      "Epoch 35, Validation Loss: 62.98\n",
-      "Epoch 36, Validation Loss: 67.66\n",
-      "Epoch 37, Validation Loss: 52.50\n",
-      "Epoch 38, Validation Loss: 56.37\n",
-      "Epoch 39, Validation Loss: 50.65\n",
-      "Epoch 40, Validation Loss: 64.91\n",
-      "Epoch 41, Validation Loss: 86.37\n",
-      "Epoch 42, Validation Loss: 57.41\n",
-      "Epoch 43, Validation Loss: 55.71\n",
-      "Epoch 44, Validation Loss: 69.65\n",
-      "Epoch 45, Validation Loss: 60.12\n",
-      "Epoch 46, Validation Loss: 59.01\n",
-      "Epoch 47, Validation Loss: 61.40\n",
-      "Epoch 48, Validation Loss: 61.31\n",
-      "Epoch 49, Validation Loss: 51.69\n",
-      "Epoch 50, Validation Loss: 58.02\n",
-      "Epoch 51, Validation Loss: 56.01\n",
-      "Epoch 52, Validation Loss: 62.39\n",
-      "Epoch 53, Validation Loss: 57.74\n",
-      "Epoch 54, Validation Loss: 59.30\n",
-      "Epoch 55, Validation Loss: 57.01\n",
-      "Epoch 56, Validation Loss: 64.65\n",
-      "Epoch 57, Validation Loss: 59.87\n",
-      "Epoch 58, Validation Loss: 73.05\n",
-      "Early stopping at epoch 58\n",
+      "Epoch 0, Validation Loss: 2162.75\n",
+      "Epoch 1, Validation Loss: 357.60\n",
+      "Epoch 2, Validation Loss: 178.94\n",
+      "Epoch 3, Validation Loss: 192.99\n",
+      "Epoch 4, Validation Loss: 133.77\n",
+      "Epoch 5, Validation Loss: 124.76\n",
+      "Epoch 6, Validation Loss: 134.15\n",
+      "Epoch 7, Validation Loss: 104.76\n",
+      "Epoch 8, Validation Loss: 93.90\n",
+      "Epoch 9, Validation Loss: 88.85\n",
+      "Epoch 10, Validation Loss: 87.39\n",
+      "Epoch 11, Validation Loss: 81.44\n",
+      "Epoch 12, Validation Loss: 71.79\n",
+      "Epoch 13, Validation Loss: 87.41\n",
+      "Epoch 14, Validation Loss: 78.15\n",
+      "Epoch 15, Validation Loss: 68.68\n",
+      "Epoch 16, Validation Loss: 65.61\n",
+      "Epoch 17, Validation Loss: 59.36\n",
+      "Epoch 18, Validation Loss: 63.63\n",
+      "Epoch 19, Validation Loss: 70.51\n",
+      "Epoch 20, Validation Loss: 69.99\n",
+      "Epoch 21, Validation Loss: 61.57\n",
+      "Epoch 22, Validation Loss: 65.48\n",
+      "Epoch 23, Validation Loss: 63.70\n",
+      "Epoch 24, Validation Loss: 61.94\n",
+      "Epoch 25, Validation Loss: 93.32\n",
+      "Epoch 26, Validation Loss: 79.71\n",
+      "Epoch 27, Validation Loss: 61.77\n",
+      "Epoch 28, Validation Loss: 51.43\n",
+      "Epoch 29, Validation Loss: 63.30\n",
+      "Epoch 30, Validation Loss: 54.36\n",
+      "Epoch 31, Validation Loss: 72.01\n",
+      "Epoch 32, Validation Loss: 54.26\n",
+      "Epoch 33, Validation Loss: 52.13\n",
+      "Epoch 34, Validation Loss: 67.82\n",
+      "Epoch 35, Validation Loss: 54.23\n",
+      "Epoch 36, Validation Loss: 51.40\n",
+      "Epoch 37, Validation Loss: 57.71\n",
+      "Epoch 38, Validation Loss: 65.94\n",
+      "Epoch 39, Validation Loss: 68.40\n",
+      "Epoch 40, Validation Loss: 55.83\n",
+      "Epoch 41, Validation Loss: 65.97\n",
+      "Epoch 42, Validation Loss: 49.55\n",
+      "Epoch 43, Validation Loss: 55.22\n",
+      "Epoch 44, Validation Loss: 53.89\n",
+      "Epoch 45, Validation Loss: 64.29\n",
+      "Epoch 46, Validation Loss: 60.73\n",
+      "Epoch 47, Validation Loss: 49.56\n",
+      "Epoch 48, Validation Loss: 53.92\n",
+      "Epoch 49, Validation Loss: 52.09\n",
+      "Epoch 50, Validation Loss: 67.52\n",
+      "Epoch 51, Validation Loss: 49.97\n",
+      "Epoch 52, Validation Loss: 60.16\n",
+      "Epoch 53, Validation Loss: 75.53\n",
+      "Epoch 54, Validation Loss: 63.51\n",
+      "Epoch 55, Validation Loss: 68.17\n",
+      "Epoch 56, Validation Loss: 66.64\n",
+      "Epoch 57, Validation Loss: 80.85\n",
+      "Epoch 58, Validation Loss: 68.06\n",
+      "Epoch 59, Validation Loss: 50.87\n",
+      "Epoch 60, Validation Loss: 53.76\n",
+      "Epoch 61, Validation Loss: 55.92\n",
+      "Early stopping at epoch 61\n",
       "Best model loaded.\n",
       "Training complete.\n"
      ]
@@ -344,7 +347,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:06<00:00, 163.55it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:05<00:00, 186.54it/s]\n"
      ]
     },
     {
@@ -352,15 +355,15 @@
      "output_type": "stream",
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean     50.769843          0.000664      0.003276\n",
-      "std      23.805431          0.013374      0.000882\n",
-      "min      16.175062          0.000000      0.001505\n",
-      "25%      33.960098          0.000000      0.002583\n",
-      "50%      44.983535          0.000000      0.003099\n",
-      "75%      62.077217          0.000000      0.003826\n",
-      "max     144.758310          0.360057      0.008720\n",
-      "Number of infeasible solution: 4\n"
+      "count  1000.000000            1000.0   1000.000000\n",
+      "mean     49.402684               0.0      0.002846\n",
+      "std      30.019292               0.0      0.000890\n",
+      "min       7.369320               0.0      0.001000\n",
+      "25%      27.007854               0.0      0.002013\n",
+      "50%      41.792557               0.0      0.002662\n",
+      "75%      64.288207               0.0      0.003287\n",
+      "max     174.388602               0.0      0.008013\n",
+      "Number of infeasible solution: 0\n"
      ]
     }
    ],
@@ -427,7 +430,7 @@
    "outputs": [],
    "source": [
     "# hyperparameters\n",
-    "penalty_weight = 100  # weight of constraint violation penealty\n",
+    "penalty_weight = 80   # weight of constraint violation penealty\n",
     "hlayers_sol = 4       # number of hidden layers for solution mapping\n",
     "hlayers_rnd = 4       # number of hidden layers for solution mapping\n",
     "hsize = 128           # width of hidden layers for solution mapping\n",
@@ -457,7 +460,7 @@
     "                          int_ind=model.int_ind, continuous_update=True, name=\"round\")\n",
     "# build neuromancer problem for rounding\n",
     "components = nn.ModuleList([smap, rnd]).to(\"cuda\")\n",
-    "loss_fn = nmRosenbrock([\"p\", \"a\", \"x_rnd\"], steepness, num_blocks)"
+    "loss_fn = nmRosenbrock([\"p\", \"a\", \"x_rnd\"], steepness, num_blocks, penalty_weight)"
    ]
   },
   {
@@ -470,82 +473,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Validation Loss: 1187.90\n",
-      "Epoch 1, Validation Loss: 405.60\n",
-      "Epoch 2, Validation Loss: 112.12\n",
-      "Epoch 3, Validation Loss: 100.49\n",
-      "Epoch 4, Validation Loss: 77.23\n",
-      "Epoch 5, Validation Loss: 95.82\n",
-      "Epoch 6, Validation Loss: 79.39\n",
-      "Epoch 7, Validation Loss: 82.70\n",
-      "Epoch 8, Validation Loss: 71.22\n",
-      "Epoch 9, Validation Loss: 74.49\n",
-      "Epoch 10, Validation Loss: 72.54\n",
-      "Epoch 11, Validation Loss: 83.04\n",
-      "Epoch 12, Validation Loss: 74.20\n",
-      "Epoch 13, Validation Loss: 75.75\n",
-      "Epoch 14, Validation Loss: 72.42\n",
-      "Epoch 15, Validation Loss: 66.66\n",
-      "Epoch 16, Validation Loss: 70.40\n",
-      "Epoch 17, Validation Loss: 66.79\n",
-      "Epoch 18, Validation Loss: 69.06\n",
-      "Epoch 19, Validation Loss: 68.58\n",
+      "Epoch 0, Validation Loss: 1856.29\n",
+      "Epoch 1, Validation Loss: 293.59\n",
+      "Epoch 2, Validation Loss: 135.55\n",
+      "Epoch 3, Validation Loss: 91.44\n",
+      "Epoch 4, Validation Loss: 94.65\n",
+      "Epoch 5, Validation Loss: 71.15\n",
+      "Epoch 6, Validation Loss: 81.10\n",
+      "Epoch 7, Validation Loss: 71.31\n",
+      "Epoch 8, Validation Loss: 71.47\n",
+      "Epoch 9, Validation Loss: 76.20\n",
+      "Epoch 10, Validation Loss: 79.67\n",
+      "Epoch 11, Validation Loss: 71.66\n",
+      "Epoch 12, Validation Loss: 74.27\n",
+      "Epoch 13, Validation Loss: 69.22\n",
+      "Epoch 14, Validation Loss: 78.52\n",
+      "Epoch 15, Validation Loss: 66.71\n",
+      "Epoch 16, Validation Loss: 72.49\n",
+      "Epoch 17, Validation Loss: 70.17\n",
+      "Epoch 18, Validation Loss: 69.57\n",
+      "Epoch 19, Validation Loss: 73.20\n",
       "Epoch 20, Validation Loss: 68.68\n",
-      "Epoch 21, Validation Loss: 65.69\n",
-      "Epoch 22, Validation Loss: 69.57\n",
-      "Epoch 23, Validation Loss: 67.66\n",
-      "Epoch 24, Validation Loss: 67.15\n",
-      "Epoch 25, Validation Loss: 71.50\n",
-      "Epoch 26, Validation Loss: 70.82\n",
-      "Epoch 27, Validation Loss: 74.32\n",
-      "Epoch 28, Validation Loss: 64.25\n",
-      "Epoch 29, Validation Loss: 66.30\n",
-      "Epoch 30, Validation Loss: 70.57\n",
-      "Epoch 31, Validation Loss: 68.86\n",
-      "Epoch 32, Validation Loss: 66.03\n",
-      "Epoch 33, Validation Loss: 70.43\n",
-      "Epoch 34, Validation Loss: 65.62\n",
-      "Epoch 35, Validation Loss: 70.20\n",
-      "Epoch 36, Validation Loss: 64.85\n",
-      "Epoch 37, Validation Loss: 65.73\n",
-      "Epoch 38, Validation Loss: 67.57\n",
-      "Epoch 39, Validation Loss: 62.05\n",
-      "Epoch 40, Validation Loss: 67.98\n",
-      "Epoch 41, Validation Loss: 61.78\n",
-      "Epoch 42, Validation Loss: 66.45\n",
-      "Epoch 43, Validation Loss: 66.14\n",
-      "Epoch 44, Validation Loss: 64.22\n",
-      "Epoch 45, Validation Loss: 65.29\n",
-      "Epoch 46, Validation Loss: 61.82\n",
-      "Epoch 47, Validation Loss: 71.21\n",
-      "Epoch 48, Validation Loss: 61.81\n",
-      "Epoch 49, Validation Loss: 68.98\n",
-      "Epoch 50, Validation Loss: 64.88\n",
-      "Epoch 51, Validation Loss: 68.34\n",
-      "Epoch 52, Validation Loss: 70.82\n",
-      "Epoch 53, Validation Loss: 61.72\n",
-      "Epoch 54, Validation Loss: 65.85\n",
-      "Epoch 55, Validation Loss: 61.57\n",
-      "Epoch 56, Validation Loss: 68.63\n",
-      "Epoch 57, Validation Loss: 69.62\n",
-      "Epoch 58, Validation Loss: 70.59\n",
-      "Epoch 59, Validation Loss: 62.56\n",
-      "Epoch 60, Validation Loss: 69.39\n",
-      "Epoch 61, Validation Loss: 67.07\n",
-      "Epoch 62, Validation Loss: 66.52\n",
-      "Epoch 63, Validation Loss: 64.83\n",
-      "Epoch 64, Validation Loss: 68.71\n",
-      "Epoch 65, Validation Loss: 65.62\n",
-      "Epoch 66, Validation Loss: 69.09\n",
-      "Epoch 67, Validation Loss: 69.34\n",
-      "Epoch 68, Validation Loss: 74.18\n",
-      "Epoch 69, Validation Loss: 66.39\n",
-      "Epoch 70, Validation Loss: 72.91\n",
-      "Epoch 71, Validation Loss: 67.97\n",
-      "Epoch 72, Validation Loss: 69.31\n",
-      "Epoch 73, Validation Loss: 67.32\n",
-      "Epoch 74, Validation Loss: 67.64\n",
-      "Early stopping at epoch 74\n",
+      "Epoch 21, Validation Loss: 67.91\n",
+      "Epoch 22, Validation Loss: 67.78\n",
+      "Epoch 23, Validation Loss: 73.36\n",
+      "Epoch 24, Validation Loss: 62.07\n",
+      "Epoch 25, Validation Loss: 65.80\n",
+      "Epoch 26, Validation Loss: 61.08\n",
+      "Epoch 27, Validation Loss: 77.95\n",
+      "Epoch 28, Validation Loss: 63.95\n",
+      "Epoch 29, Validation Loss: 67.13\n",
+      "Epoch 30, Validation Loss: 73.72\n",
+      "Epoch 31, Validation Loss: 66.05\n",
+      "Epoch 32, Validation Loss: 64.40\n",
+      "Epoch 33, Validation Loss: 68.95\n",
+      "Epoch 34, Validation Loss: 65.05\n",
+      "Epoch 35, Validation Loss: 61.18\n",
+      "Epoch 36, Validation Loss: 64.77\n",
+      "Epoch 37, Validation Loss: 74.98\n",
+      "Epoch 38, Validation Loss: 68.29\n",
+      "Epoch 39, Validation Loss: 66.93\n",
+      "Epoch 40, Validation Loss: 67.90\n",
+      "Epoch 41, Validation Loss: 65.74\n",
+      "Epoch 42, Validation Loss: 63.31\n",
+      "Epoch 43, Validation Loss: 62.89\n",
+      "Epoch 44, Validation Loss: 62.99\n",
+      "Epoch 45, Validation Loss: 67.86\n",
+      "Early stopping at epoch 45\n",
       "Best model loaded.\n",
       "Training complete.\n"
      ]
@@ -574,7 +548,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:05<00:00, 182.11it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:06<00:00, 162.32it/s]\n"
      ]
     },
     {
@@ -582,15 +556,15 @@
      "output_type": "stream",
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean     61.242237          0.003479      0.002981\n",
-      "std      24.403990          0.079699      0.000739\n",
-      "min       8.234531          0.000000      0.001000\n",
-      "25%      43.504385          0.000000      0.002350\n",
-      "50%      56.753799          0.000000      0.003013\n",
-      "75%      78.066198          0.000000      0.003436\n",
-      "max     134.794266          2.437754      0.005433\n",
-      "Number of infeasible solution: 5\n"
+      "count  1000.000000            1000.0   1000.000000\n",
+      "mean     60.863243               0.0      0.003321\n",
+      "std      18.257178               0.0      0.001077\n",
+      "min      22.440795               0.0      0.001000\n",
+      "25%      48.507281               0.0      0.002512\n",
+      "50%      58.533421               0.0      0.003002\n",
+      "75%      71.119708               0.0      0.004000\n",
+      "max     157.461830               0.0      0.008532\n",
+      "Number of infeasible solution: 0\n"
      ]
     }
    ],
