--- a/Test Rosenbrock 50-100.ipynb
+++ b/Test Rosenbrock 50-100.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "160d5677-c861-486f-9533-852d43f971bf",
    "metadata": {},
    "outputs": [],
@@ -207,13 +207,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "536d2d58-67ba-408a-b72a-7c5bd54a5ff4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# hyperparameters\n",
-    "penalty_weight = 1000 # weight of constraint violation penealty\n",
+    "penalty_weight = 80   # weight of constraint violation penealty\n",
     "hlayers_sol = 4       # number of hidden layers for solution mapping\n",
     "hlayers_rnd = 4       # number of hidden layers for solution mapping\n",
     "hsize = 256           # width of hidden layers for solution mapping\n",
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "fee1241e-e53a-4cbb-927a-edcdb3537303",
    "metadata": {},
    "outputs": [],
@@ -243,12 +243,12 @@
     "                       int_ind=model.int_ind, continuous_update=True, name=\"round\")\n",
     "# build neuromancer problem for rounding\n",
     "components = nn.ModuleList([smap, rnd]).to(\"cuda\")\n",
-    "loss_fn = nmRosenbrock([\"p\", \"a\", \"x_rnd\"], steepness, num_blocks)"
+    "loss_fn = nmRosenbrock([\"p\", \"a\", \"x_rnd\"], steepness, num_blocks, penalty_weight)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "e4f10263-5f69-4288-a4e8-8be83929c8d6",
    "metadata": {},
    "outputs": [
@@ -256,83 +256,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Validation Loss: 14252.06\n",
-      "Epoch 1, Validation Loss: 11353.40\n",
-      "Epoch 2, Validation Loss: 2458.08\n",
-      "Epoch 3, Validation Loss: 1542.39\n",
-      "Epoch 4, Validation Loss: 1084.99\n",
-      "Epoch 5, Validation Loss: 971.39\n",
-      "Epoch 6, Validation Loss: 1021.46\n",
-      "Epoch 7, Validation Loss: 926.33\n",
-      "Epoch 8, Validation Loss: 964.00\n",
-      "Epoch 9, Validation Loss: 826.47\n",
-      "Epoch 10, Validation Loss: 759.06\n",
-      "Epoch 11, Validation Loss: 764.51\n",
-      "Epoch 12, Validation Loss: 672.06\n",
-      "Epoch 13, Validation Loss: 747.75\n",
-      "Epoch 14, Validation Loss: 818.27\n",
-      "Epoch 15, Validation Loss: 803.62\n",
-      "Epoch 16, Validation Loss: 726.48\n",
-      "Epoch 17, Validation Loss: 669.91\n",
-      "Epoch 18, Validation Loss: 694.39\n",
-      "Epoch 19, Validation Loss: 753.30\n",
-      "Epoch 20, Validation Loss: 683.41\n",
-      "Epoch 21, Validation Loss: 813.46\n",
-      "Epoch 22, Validation Loss: 682.54\n",
-      "Epoch 23, Validation Loss: 855.66\n",
-      "Epoch 24, Validation Loss: 878.73\n",
-      "Epoch 25, Validation Loss: 669.50\n",
-      "Epoch 26, Validation Loss: 626.54\n",
-      "Epoch 27, Validation Loss: 661.81\n",
-      "Epoch 28, Validation Loss: 715.42\n",
-      "Epoch 29, Validation Loss: 902.35\n",
-      "Epoch 30, Validation Loss: 830.12\n",
-      "Epoch 31, Validation Loss: 686.02\n",
-      "Epoch 32, Validation Loss: 770.64\n",
-      "Epoch 33, Validation Loss: 872.90\n",
-      "Epoch 34, Validation Loss: 712.47\n",
-      "Epoch 35, Validation Loss: 615.57\n",
-      "Epoch 36, Validation Loss: 624.83\n",
-      "Epoch 37, Validation Loss: 894.92\n",
-      "Epoch 38, Validation Loss: 843.96\n",
-      "Epoch 39, Validation Loss: 701.29\n",
-      "Epoch 40, Validation Loss: 722.94\n",
-      "Epoch 41, Validation Loss: 873.14\n",
-      "Epoch 42, Validation Loss: 758.66\n",
-      "Epoch 43, Validation Loss: 579.68\n",
-      "Epoch 44, Validation Loss: 667.25\n",
-      "Epoch 45, Validation Loss: 635.91\n",
-      "Epoch 46, Validation Loss: 788.25\n",
-      "Epoch 47, Validation Loss: 638.85\n",
-      "Epoch 48, Validation Loss: 678.69\n",
-      "Epoch 49, Validation Loss: 679.13\n",
-      "Epoch 50, Validation Loss: 607.66\n",
-      "Epoch 51, Validation Loss: 1423.87\n",
-      "Epoch 52, Validation Loss: 641.19\n",
-      "Epoch 53, Validation Loss: 840.15\n",
-      "Epoch 54, Validation Loss: 779.54\n",
-      "Epoch 55, Validation Loss: 782.38\n",
-      "Epoch 56, Validation Loss: 567.04\n",
-      "Epoch 57, Validation Loss: 685.03\n",
-      "Epoch 58, Validation Loss: 632.03\n",
-      "Epoch 59, Validation Loss: 747.49\n",
-      "Epoch 60, Validation Loss: 1122.79\n",
-      "Epoch 61, Validation Loss: 610.55\n",
-      "Epoch 62, Validation Loss: 1492.76\n",
-      "Epoch 63, Validation Loss: 1405.73\n",
-      "Epoch 64, Validation Loss: 736.09\n",
-      "Epoch 65, Validation Loss: 773.64\n",
-      "Epoch 66, Validation Loss: 1081.37\n",
-      "Epoch 67, Validation Loss: 1318.12\n",
-      "Epoch 68, Validation Loss: 861.08\n",
-      "Epoch 69, Validation Loss: 716.36\n",
-      "Epoch 70, Validation Loss: 713.74\n",
-      "Epoch 71, Validation Loss: 1773.33\n",
-      "Epoch 72, Validation Loss: 1088.96\n",
-      "Epoch 73, Validation Loss: 1010.13\n",
-      "Epoch 74, Validation Loss: 1153.40\n",
-      "Epoch 75, Validation Loss: 1555.08\n",
-      "Early stopping at epoch 75\n",
+      "Epoch 0, Validation Loss: 20996.05\n",
+      "Epoch 1, Validation Loss: 4016.29\n",
+      "Epoch 2, Validation Loss: 1759.47\n",
+      "Epoch 3, Validation Loss: 1213.61\n",
+      "Epoch 4, Validation Loss: 1522.16\n",
+      "Epoch 5, Validation Loss: 1312.35\n",
+      "Epoch 6, Validation Loss: 1165.38\n",
+      "Epoch 7, Validation Loss: 1032.75\n",
+      "Epoch 8, Validation Loss: 1098.03\n",
+      "Epoch 9, Validation Loss: 1492.84\n",
+      "Epoch 10, Validation Loss: 1189.45\n",
+      "Epoch 11, Validation Loss: 831.75\n",
+      "Epoch 12, Validation Loss: 845.00\n",
+      "Epoch 13, Validation Loss: 885.85\n",
+      "Epoch 14, Validation Loss: 662.87\n",
+      "Epoch 15, Validation Loss: 820.98\n",
+      "Epoch 16, Validation Loss: 756.71\n",
+      "Epoch 17, Validation Loss: 650.82\n",
+      "Epoch 18, Validation Loss: 665.11\n",
+      "Epoch 19, Validation Loss: 884.84\n",
+      "Epoch 20, Validation Loss: 730.10\n",
+      "Epoch 21, Validation Loss: 614.67\n",
+      "Epoch 22, Validation Loss: 644.56\n",
+      "Epoch 23, Validation Loss: 720.34\n",
+      "Epoch 24, Validation Loss: 749.18\n",
+      "Epoch 25, Validation Loss: 666.92\n",
+      "Epoch 26, Validation Loss: 606.64\n",
+      "Epoch 27, Validation Loss: 566.92\n",
+      "Epoch 28, Validation Loss: 766.88\n",
+      "Epoch 29, Validation Loss: 723.36\n",
+      "Epoch 30, Validation Loss: 664.51\n",
+      "Epoch 31, Validation Loss: 715.34\n",
+      "Epoch 32, Validation Loss: 656.88\n",
+      "Epoch 33, Validation Loss: 648.94\n",
+      "Epoch 34, Validation Loss: 617.90\n",
+      "Epoch 35, Validation Loss: 598.58\n",
+      "Epoch 36, Validation Loss: 601.60\n",
+      "Epoch 37, Validation Loss: 912.76\n",
+      "Epoch 38, Validation Loss: 682.82\n",
+      "Epoch 39, Validation Loss: 795.96\n",
+      "Epoch 40, Validation Loss: 665.26\n",
+      "Epoch 41, Validation Loss: 721.86\n",
+      "Epoch 42, Validation Loss: 694.10\n",
+      "Epoch 43, Validation Loss: 633.82\n",
+      "Epoch 44, Validation Loss: 729.53\n",
+      "Epoch 45, Validation Loss: 898.61\n",
+      "Epoch 46, Validation Loss: 1169.38\n",
+      "Early stopping at epoch 46\n",
       "Best model loaded.\n",
       "Training complete.\n"
      ]
@@ -353,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "3e835084-eb75-45d9-bcbd-5fb4c613fb41",
    "metadata": {},
    "outputs": [
@@ -361,7 +332,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:16<00:00, 61.33it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:16<00:00, 61.71it/s]\n"
      ]
     },
     {
@@ -370,14 +341,14 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    565.135432          0.091505      0.002898\n",
-      "std     273.609467          1.290856      0.000726\n",
-      "min     210.354417          0.000000      0.001328\n",
-      "25%     336.175255          0.000000      0.002352\n",
-      "50%     511.836116          0.000000      0.003000\n",
-      "75%     747.684359          0.000000      0.003185\n",
-      "max    1617.493314         29.640963      0.008331\n",
-      "Number of infeasible solution: 15\n"
+      "mean    566.171906          0.029956      0.002884\n",
+      "std     204.640706          0.513843      0.000812\n",
+      "min     259.581433          0.000000      0.001000\n",
+      "25%     369.971996          0.000000      0.002217\n",
+      "50%     549.590792          0.000000      0.002999\n",
+      "75%     728.124546          0.000000      0.003193\n",
+      "max    1358.752855         12.362421      0.008658\n",
+      "Number of infeasible solution: 7\n"
      ]
     }
    ],
@@ -425,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "0c4b3d02-3cac-4bce-aaaf-43994ff200d6",
    "metadata": {},
    "outputs": [],
@@ -438,13 +409,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "d46b9817-87ac-4af0-b387-b10c9a4998f4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# hyperparameters\n",
-    "penalty_weight = 1000 # weight of constraint violation penealty\n",
+    "penalty_weight = 80   # weight of constraint violation penealty\n",
     "hlayers_sol = 4       # number of hidden layers for solution mapping\n",
     "hlayers_rnd = 4       # number of hidden layers for solution mapping\n",
     "hsize = 256           # width of hidden layers for solution mapping\n",
@@ -453,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "fa8b147f-39c8-4eb7-bb95-93dd8e4cb1cf",
    "metadata": {},
    "outputs": [],
@@ -474,12 +445,12 @@
     "                          int_ind=model.int_ind, continuous_update=True, name=\"round\")\n",
     "# build neuromancer problem for rounding\n",
     "components = nn.ModuleList([smap, rnd]).to(\"cuda\")\n",
-    "loss_fn = nmRosenbrock([\"p\", \"a\", \"x_rnd\"], steepness, num_blocks)"
+    "loss_fn = nmRosenbrock([\"p\", \"a\", \"x_rnd\"], steepness, num_blocks, penalty_weight)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "c6f5bb17-8c3c-4dcd-952d-caa1d7c4c4fa",
    "metadata": {},
    "outputs": [
@@ -487,49 +458,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Validation Loss: 11882.62\n",
-      "Epoch 1, Validation Loss: 11657.28\n",
-      "Epoch 2, Validation Loss: 1092.48\n",
-      "Epoch 3, Validation Loss: 1329.93\n",
-      "Epoch 4, Validation Loss: 1065.02\n",
-      "Epoch 5, Validation Loss: 872.44\n",
-      "Epoch 6, Validation Loss: 1442.29\n",
-      "Epoch 7, Validation Loss: 850.61\n",
-      "Epoch 8, Validation Loss: 824.83\n",
-      "Epoch 9, Validation Loss: 766.36\n",
-      "Epoch 10, Validation Loss: 892.28\n",
-      "Epoch 11, Validation Loss: 2147748.04\n",
-      "Epoch 12, Validation Loss: 665.02\n",
-      "Epoch 13, Validation Loss: 703.67\n",
-      "Epoch 14, Validation Loss: 1190.98\n",
-      "Epoch 15, Validation Loss: 1060.81\n",
-      "Epoch 16, Validation Loss: 791.68\n",
-      "Epoch 17, Validation Loss: 231511.21\n",
-      "Epoch 18, Validation Loss: 955.99\n",
-      "Epoch 19, Validation Loss: 716.73\n",
-      "Epoch 20, Validation Loss: 644.50\n",
-      "Epoch 21, Validation Loss: 771.72\n",
-      "Epoch 22, Validation Loss: 609.89\n",
-      "Epoch 23, Validation Loss: 1313338198528.00\n",
-      "Epoch 24, Validation Loss: 709.92\n",
-      "Epoch 25, Validation Loss: 742.58\n",
-      "Epoch 26, Validation Loss: 696.56\n",
-      "Epoch 27, Validation Loss: 992.11\n",
-      "Epoch 28, Validation Loss: 995.28\n",
-      "Epoch 29, Validation Loss: 640.37\n",
-      "Epoch 30, Validation Loss: 669.82\n",
-      "Epoch 31, Validation Loss: 811.79\n",
-      "Epoch 32, Validation Loss: 887.93\n",
-      "Epoch 33, Validation Loss: 705.89\n",
-      "Epoch 34, Validation Loss: 747.82\n",
-      "Epoch 35, Validation Loss: 775.79\n",
-      "Epoch 36, Validation Loss: 1017.06\n",
-      "Epoch 37, Validation Loss: 779.28\n",
-      "Epoch 38, Validation Loss: 683.48\n",
-      "Epoch 39, Validation Loss: 977.84\n",
-      "Epoch 40, Validation Loss: 1868.31\n",
-      "Epoch 41, Validation Loss: 929.77\n",
-      "Early stopping at epoch 41\n",
+      "Epoch 0, Validation Loss: 18587.63\n",
+      "Epoch 1, Validation Loss: 3448.91\n",
+      "Epoch 2, Validation Loss: 2870.52\n",
+      "Epoch 3, Validation Loss: 1232.80\n",
+      "Epoch 4, Validation Loss: 1303.39\n",
+      "Epoch 5, Validation Loss: 1380.01\n",
+      "Epoch 6, Validation Loss: 1107.19\n",
+      "Epoch 7, Validation Loss: 14572.58\n",
+      "Epoch 8, Validation Loss: 2064.73\n",
+      "Epoch 9, Validation Loss: 24670.45\n",
+      "Epoch 10, Validation Loss: 843.25\n",
+      "Epoch 11, Validation Loss: 727.15\n",
+      "Epoch 12, Validation Loss: 2243217268.91\n",
+      "Epoch 13, Validation Loss: 794.01\n",
+      "Epoch 14, Validation Loss: 827.54\n",
+      "Epoch 15, Validation Loss: 809.01\n",
+      "Epoch 16, Validation Loss: 1533.53\n",
+      "Epoch 17, Validation Loss: 712.35\n",
+      "Epoch 18, Validation Loss: 736.32\n",
+      "Epoch 19, Validation Loss: 808.03\n",
+      "Epoch 20, Validation Loss: 725.17\n",
+      "Epoch 21, Validation Loss: 896.27\n",
+      "Epoch 22, Validation Loss: 731.22\n",
+      "Epoch 23, Validation Loss: 639.29\n",
+      "Epoch 24, Validation Loss: 747.64\n",
+      "Epoch 25, Validation Loss: 799.46\n",
+      "Epoch 26, Validation Loss: 965.93\n",
+      "Epoch 27, Validation Loss: 714.63\n",
+      "Epoch 28, Validation Loss: 673.89\n",
+      "Epoch 29, Validation Loss: 692.98\n",
+      "Epoch 30, Validation Loss: 913.31\n",
+      "Epoch 31, Validation Loss: 921.00\n",
+      "Epoch 32, Validation Loss: 704.58\n",
+      "Epoch 33, Validation Loss: 813.10\n",
+      "Epoch 34, Validation Loss: 787.65\n",
+      "Epoch 35, Validation Loss: 749.38\n",
+      "Epoch 36, Validation Loss: 641.45\n",
+      "Epoch 37, Validation Loss: 887.43\n",
+      "Epoch 38, Validation Loss: 743.98\n",
+      "Epoch 39, Validation Loss: 757.09\n",
+      "Epoch 40, Validation Loss: 1006.59\n",
+      "Epoch 41, Validation Loss: 860.04\n",
+      "Epoch 42, Validation Loss: 812.01\n",
+      "Early stopping at epoch 42\n",
       "Best model loaded.\n",
       "Training complete.\n"
      ]
@@ -550,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "6584d57e-6b4c-4262-82f5-55735ef17cac",
    "metadata": {},
    "outputs": [
@@ -558,7 +530,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:16<00:00, 61.16it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:19<00:00, 52.05it/s]\n"
      ]
     },
     {
@@ -567,14 +539,14 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    610.819200          0.017875      0.002874\n",
-      "std     190.853377          0.342633      0.000721\n",
-      "min     319.190974          0.000000      0.000999\n",
-      "25%     478.882411          0.000000      0.002304\n",
-      "50%     583.233021          0.000000      0.002999\n",
-      "75%     688.061123          0.000000      0.003231\n",
-      "max    1831.013301          7.704545      0.007045\n",
-      "Number of infeasible solution: 4\n"
+      "mean    639.705636          0.002873      0.003336\n",
+      "std     129.252851          0.090847      0.001047\n",
+      "min     416.801831          0.000000      0.001504\n",
+      "25%     551.017653          0.000000      0.002522\n",
+      "50%     612.712141          0.000000      0.003006\n",
+      "75%     682.096726          0.000000      0.004000\n",
+      "max    1061.078556          2.872840      0.012975\n",
+      "Number of infeasible solution: 1\n"
      ]
     }
    ],
